@@ -1,3 +1,7 @@
+2010-12-17  Christian Kauhaus <kc@gocept.com>
+
+	* Fix output of large decimal numbers #8440.
+
 2010-10-11  Christian Kauhaus  <kc@gocept.com>
 
 	* Fix missing HISTORY.txt in sdist.
